fetch results for vorgang
